--- a/roles/custom/templates/etc/nsswitch.conf
+++ b/roles/custom/templates/etc/nsswitch.conf
@@ -83,7 +83,7 @@ services:   sss files
 
 # In order of likelihood of use to accelerate lookup.
 shadow:     files sss
-hosts:      files
+hosts:      {{ nsswitch_hosts }}
 
 aliases:    files
 ethers:     files
