--- a/roles/zabbix-agent/tasks/main.yml
+++ b/roles/zabbix-agent/tasks/main.yml
@@ -6,11 +6,16 @@
     owner: root
     group: root
     mode: '0644'
+  tags:
+    - zabbix-agent
 
 - name: install zabbix-agent
   yum:
     name: /tmp/zabbix-agent-4.0.32-1.el8.x86_64.rpm
     state: present
+    disable_gpg_check: yes
+  tags:
+    - zabbix-agent
 
 - name: copy configuration file
   template:
@@ -20,3 +25,17 @@
     group: root
     mode: '0644'
   notify: start zabbix-agent.service
+  tags:
+    - zabbix-agent
+
+# - name: add user parameter files
+#   copy:
+#     src: '{{ item }}'
+#     dest: /etc/zabbix/zabbix_agentd.d/
+#     owner: root
+#     group: root
+#     mode: '0644'
+#   with_fileglob:
+#     - etc/zabbix/zabbix_agentd.d/*
+#   tags:
+#     - zabbix-agent
